--- a/src/pynxtools_spm/nomad/examples/stm/STMExampleWithCustomization/stm.scheme.archive.yaml
+++ b/src/pynxtools_spm/nomad/examples/stm/STMExampleWithCustomization/stm.scheme.archive.yaml
@@ -1,7 +1,9 @@
 definitions:
-  name: An ELN example for STM (Scanning Tunneling Microscopy).
+  name: "STM_ELN_Example"
+  eln:
+    label: "STM ELN Example"
   sections:
-    stm:
+    ELN_for_STM:
       base_sections:
         - pynxtools.nomad.dataconverter.NexusDataConverter
         - nomad.datamodel.data.EntryData
@@ -11,6 +13,7 @@ definitions:
           nxdl: NXstm
         eln:
           hide: []
+          label: "ELN for STM"
       quantities:
         default:
           type: str
@@ -40,7 +43,7 @@ definitions:
             eln:
               component: EnumEditQuantity
           description: |
-            Name of the technique used for the experiment, e.g. STM. 
+            Name of the technique used for the experiment, e.g. STM.
         scan_mode:
           type:
             type_kind: Enum
@@ -51,7 +54,7 @@ definitions:
             eln:
               component: EnumEditQuantity
           description: |
-            Type of the scan mode to define the type of the interaction between 
+            Type of the scan mode to define the type of the interaction between
             the tip and the sample.
         experiment_description:
           type: str
@@ -59,11 +62,11 @@ definitions:
             eln:
               component: RichTextEditQuantity
           description: |
-            Descriptive comments for this experiment, added by the experimenter in eln or 
+            Descriptive comments for this experiment, added by the experimenter in eln or
             coming from the output file, e.g. Comment01 SYNC & Filter LP 8order WITHDRAW
             600 steps, locked Au(111), 50pA, 100 mV set point, 1mV DCA, 973Hz,138
             1st H, -84 2nd H.
-        identifier_experiment: 
+        identifier_experiment:
           type: str
           m_annotations:
             eln:
@@ -71,7 +74,7 @@ definitions:
           description: |
             An unique identifier fot the experiment. e.g. the identifier
             could be specific for a lab or experiment team.
-        identifier_collection: 
+        identifier_collection:
           type: str
           m_annotations:
             eln:
@@ -141,8 +144,8 @@ definitions:
                         eln:
                           component: StringEditQuantity
                       description: |
-                          Version or model of the component named by the manufacturer (e.g. Nanonis).
-                    model/@version:
+                        Version or model of the component named by the manufacturer (e.g. Nanonis).
+                    model_version:
                       type: str
                       m_annotations:
                         eln:
@@ -175,10 +178,10 @@ definitions:
                         eln:
                           component: StringEditQuantity
                       description: |
-                        Version or model, required to choose correct file parser, of the component named 
-                        by the manufacturer (e.g. Generic 5e). 
+                        Version or model, required to choose correct file parser, of the component named
+                        by the manufacturer (e.g. Generic 5e).
                         Note that the model should be exactly the same as in the experiment file.
-                    model/@version:
+                    model_version:
                       type: str
                       m_annotations:
                         eln:
@@ -209,7 +212,7 @@ definitions:
                                     eln:
                                       component: StringEditQuantity
                                   description: |
-                                    An unique identifier for the piezo material.              
+                                    An unique identifier for the piezo material.
               lockin_amplifier:
                 section:
                   m_annotations:
@@ -248,7 +251,7 @@ definitions:
                           component: NumberEditQuantity
                           defaultDisplayUnit: K
                       description: |
-                        Temperature of the cold tail of the cryostat. Note: 
+                        Temperature of the cold tail of the cryostat. Note:
                         At least one field from head_temperature, cryo_bottom_temperature and cryo_shield_temperature must be provided.
                     cryo_shield_temperature:
                       type: np.float64
@@ -263,7 +266,7 @@ definitions:
         Sample:
           section:
             m_annotations:
-              eln: 
+              eln:
                 overview: true
             quantities:
               name:
@@ -281,7 +284,7 @@ definitions:
                 description: |
                   The chemical formula specified using CIF conventions.
                   Abbreviated version of CIF standard:
-                  
+
                   * Only recognized element symbols may be used.
                   * Each element symbol is followed by a 'count' number. A count of '1' may be omitted.
                   * A space or parenthesis must separate each cluster of (element symbol + count).
@@ -292,10 +295,10 @@ definitions:
                     structure, the order of the elements within any group or moiety depends on
                     whether or not carbon is present.
                   * If carbon is present, the order should be:
-                  
+
                     - C, then H, then the other elements in alphabetical order of their symbol.
                     - If carbon is not present, the elements are listed purely in alphabetic order of their symbol.
-                    
+
                   * This is the *Hill* system used by Chemical Abstracts.
               description:
                 type: str
@@ -336,7 +339,7 @@ definitions:
                       description: |
                         The chemical formula specified using CIF conventions.
                         Abbreviated version of CIF standard:
-                        
+
                         * Only recognized element symbols may be used.
                         * Each element symbol is followed by a 'count' number. A count of '1' may be omitted.
                         * A space or parenthesis must separate each cluster of (element symbol + count).
@@ -347,10 +350,10 @@ definitions:
                           structure, the order of the elements within any group or moiety depends on
                           whether or not carbon is present.
                         * If carbon is present, the order should be:
-                        
+
                           - C, then H, then the other elements in alphabetical order of their symbol.
                           - If carbon is not present, the elements are listed purely in alphabetic order of their symbol.
-                          
+
                         * This is the *Hill* system used by Chemical Abstracts.
                     description:
                       type: str
@@ -379,7 +382,7 @@ definitions:
                               eln:
                                 component: RichTextEditQuantity
                             description: |
-                              Title of an image or other details of the note.                          
+                              Title of an image or other details of the note.
                   quantities:
                     identifier_history:
                       type: str
