--- a/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/sts.scheme.archive.yaml
+++ b/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/sts.scheme.archive.yaml
@@ -1,7 +1,9 @@
 definitions:
-  name: An ELN example for STS (Scanning Tunneling Spectroscopy).
+  name: "STS_ELN_Example"
+  eln:
+    label: "STS ELN Example"
   sections:
-    sts:
+    ELN_for_STS:
       base_sections:
         - pynxtools.nomad.dataconverter.NexusDataConverter
         - nomad.datamodel.data.EntryData
@@ -11,6 +13,7 @@ definitions:
           nxdl: NXsts
         eln:
           hide: []
+          label: "ELN for STS"
       quantities:
         default:
           type: str
@@ -29,7 +32,7 @@ definitions:
             eln:
               component: EnumEditQuantity
           description: |
-            Name of the definitions from NeXus app def designed for STS experiments, one can use 
+            Name of the definitions from NeXus app def designed for STS experiments, one can use
             NXsts or NXspm, but NXsts is recommended.
         experiment_technique:
           type:
@@ -47,11 +50,11 @@ definitions:
             eln:
               component: RichTextEditQuantity
           description: |
-            Descriptive comments for this experiment, added by the experimenter in eln or 
+            Descriptive comments for this experiment, added by the experimenter in eln or
             coming from the output file, e.g. Comment01 SYNC & Filter LP 8order WITHDRAW
             600 steps, locked Au(111), 50pA, 100 mV set point, 1mV DCA, 973Hz,138
             1st H, -84 2nd H.
-        identifier_experiment: 
+        identifier_experiment:
           type: str
           m_annotations:
             eln:
@@ -59,7 +62,7 @@ definitions:
           description: |
             An unique identifier fot the experiment. e.g. the identifier
             could be specific for a lab or experiment team.
-        identifier_collection: 
+        identifier_collection:
           type: str
           m_annotations:
             eln:
@@ -129,8 +132,8 @@ definitions:
                         eln:
                           component: StringEditQuantity
                       description: |
-                          Version or model of the component named by the manufacturer (e.g. Generic 5e).
-                    model/@version:
+                        Version or model of the component named by the manufacturer (e.g. Generic 5e).
+                    model_version:
                       type: str
                       m_annotations:
                         eln:
@@ -163,10 +166,10 @@ definitions:
                         eln:
                           component: StringEditQuantity
                       description: |
-                        Version or model, required to choose correct file parser, of the component named 
+                        Version or model, required to choose correct file parser, of the component named
                         by the manufacturer (e.g. Generic 5e).
                         Note that model should be exactly the same as the one in the experiment file.
-                    model/@version:
+                    model_version:
                       type: str
                       m_annotations:
                         eln:
@@ -194,9 +197,9 @@ definitions:
                       description: |
                         The sign (1 or -1) that defines the sign of the lock-in current.
                         The calibration procedure with retracted tip is normally performed
-                        to compensate for the signal phase delay in SPM. The procedure 
+                        to compensate for the signal phase delay in SPM. The procedure
                         yields two possible solutions, this number should be equal to 1 or -1
-                        depending on which solution is chosen (this concept mainly used in 
+                        depending on which solution is chosen (this concept mainly used in
                         STS experiments, e.g. in Nanonis machine).
               Scan_environment:
                 section:
@@ -222,7 +225,7 @@ definitions:
                           component: NumberEditQuantity
                           defaultDisplayUnit: K
                       description: |
-                        Temperature of the cold tail of the cryostat. Note: 
+                        Temperature of the cold tail of the cryostat. Note:
                         At least one field from head_temperature, cryo_bottom_temperature and cryo_shield_temperature must be provided.
                     cryo_shield_temperature:
                       type: np.float64
@@ -237,7 +240,7 @@ definitions:
         Sample:
           section:
             m_annotations:
-              eln: 
+              eln:
                 overview: true
             quantities:
               name:
@@ -255,7 +258,7 @@ definitions:
                 description: |
                   The chemical formula specified using CIF conventions.
                   Abbreviated version of CIF standard:
-                  
+
                   * Only recognized element symbols may be used.
                   * Each element symbol is followed by a 'count' number. A count of '1' may be omitted.
                   * A space or parenthesis must separate each cluster of (element symbol + count).
@@ -266,10 +269,10 @@ definitions:
                     structure, the order of the elements within any group or moiety depends on
                     whether or not carbon is present.
                   * If carbon is present, the order should be:
-                  
+
                     - C, then H, then the other elements in alphabetical order of their symbol.
                     - If carbon is not present, the elements are listed purely in alphabetic order of their symbol.
-                    
+
                   * This is the *Hill* system used by Chemical Abstracts.
               description:
                 type: str
@@ -310,7 +313,7 @@ definitions:
                       description: |
                         The chemical formula specified using CIF conventions.
                         Abbreviated version of CIF standard:
-                        
+
                         * Only recognized element symbols may be used.
                         * Each element symbol is followed by a 'count' number. A count of '1' may be omitted.
                         * A space or parenthesis must separate each cluster of (element symbol + count).
@@ -321,10 +324,10 @@ definitions:
                           structure, the order of the elements within any group or moiety depends on
                           whether or not carbon is present.
                         * If carbon is present, the order should be:
-                        
+
                           - C, then H, then the other elements in alphabetical order of their symbol.
                           - If carbon is not present, the elements are listed purely in alphabetic order of their symbol.
-                          
+
                         * This is the *Hill* system used by Chemical Abstracts.
                     description:
                       type: str
@@ -353,7 +356,7 @@ definitions:
                               eln:
                                 component: RichTextEditQuantity
                             description: |
-                              Title of an image or other details of the note.                          
+                              Title of an image or other details of the note.
                   quantities:
                     identifier_history:
                       type: str
