--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version"]
 authors = [
     { name = "The NOMAD Authors" },
 ]
-description = "A plugin of pynxtools to convert exprimental file from STS, STM, and AFM to NeXus format."
+description = "pynxtools-spm: A pynxtools plugin for SPM (Scanning Probe Microscopy) data readers"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.10"
@@ -30,15 +30,7 @@ dependencies = [
     "hvplot",
     "spym>=0.9.2", # tested version `spym==0.9.2`
     "tzlocal",
-    "mkdocs",
-    "mkdocs-mermaid2-plugin",
-    "mkdocstrings",
-    "mkdocs-material",
-    "mkdocs-macros-plugin",
-    "mkdocs-simple-hooks"
 ]
-
-# TODO: Add acknowledgements to pySPM python package
 
 [project.urls]
 "Homepage" = "https://github.com/FAIRmat-NFDI/pynxtools-spm"
@@ -68,7 +60,6 @@ spm = "pynxtools_spm.reader:SPMReader"
 sts_example = "pynxtools_spm.nomad.entrypoints:sts_example"
 stm_example = "pynxtools_spm.nomad.entrypoints:stm_example"
 afm_example = "pynxtools_spm.nomad.entrypoints:afm_example"
-spm_app = "pynxtools_spm.app:spm_app"
 
 
 [tool.setuptools.packages.find]
