--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    # "pynxtools>=0.12.0",
     "findiff>=0.11.1",
     # "pynxtools>=0.11.0",
     "pynxtools @ git+https://github.com/FAIRmat-NFDI/pynxtools.git@master#egg=pynxtools",
@@ -29,7 +30,7 @@ dependencies = [
     "scipy",
     "hvplot",
     "spym>=0.9.2",
-    "tzlocal",
+    "tzlocal"
 ]
 
 # TODO: Add acknowledgements to pySPM python package
@@ -43,7 +44,7 @@ dev = [
     "mypy",
     "ruff>=0.14.0",
     "pytest",
-    "pre-commit",
+    "pre-commit"
 ]
 
 docs = [
