--- a/.github/workflows/spellcheck.yaml
+++ b/.github/workflows/spellcheck.yaml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Run cspell
       run: |
-        cspell --config cspell.json "docs/explanation/**/*" "docs/how-to-guides/**/*" "docs/reference/**/*" "docs/tutorial/**/*"  "docs/*.md" "CITATION.cff" "README.md"
+        cspell --config cspell.json "docs/explanation/**/*" "docs/how-to-guides/**/*" "docs/reference/**/*" "docs/tutorials/**/*"  "docs/*.md" "CITATION.cff" "README.md"
 
     - name: Fail on errors
       run: |
@@ -26,4 +26,3 @@ jobs:
           echo "There are spelling errors in your code. Please fix them and try again."
           exit 1
         fi
-
