--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,28 +1,31 @@
 site_name: Documentation
 site_description: |
-  The documentation for NOMAD.
+  The documentation for pynxtools-spm plugin.
 site_author: The NOMAD Authors
 repo_url: https://github.com/FAIRmat-NFDI/pynxtools-spm
-site_url: https://nomad-lab.eu/prod/v1/docs/index.html
+site_url: https://fairmat-nfdi.github.io/pynxtools-spm/
 edit_uri: ""
 use_directory_urls: false
 nav:
   - Home: index.md
-  - Explanation: 
-      - explanation/reader-explanation.md
   - Tutorial:
-      - tutorial/nomad-tutorial.md
-      - tutorial/reader-tutorial.md
-  - How-To-Guide : 
-      - how-to-guides/how-to-interact-with-reader.md
-  - Reference: 
-      - reference/reference.md
+      - tutorials/installation.md
+      - tutorials/use-reader-in-nomad.md
+  - How-To Guides:
+      - how-to-guides/work-with-reader.md
+      - how-to-guides/how-to-extend-readers.md
+  - Explanation:
+      - explanation/reader-orchestra.md
+      - explanation/reader-structure.md
+  - Reference:
+      - reference/standalone-usages.md
 plugins:
-  # - mkdocstrings
-  # - mermaid2
   - search
   - macros:
       module_name: docs/macros
+  - mkdocs-simple-hooks:
+      hooks:
+        on_pre_build: "docs.hooks:copy_hook" # Copy files content from souce to docs
 markdown_extensions:
   - attr_list
   - md_in_html
@@ -31,7 +34,9 @@ markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
-  - pymdownx.snippets
+  - pymdownx.snippets:
+      base_path: docs
+      check_paths: true
   - toc:
       permalink: True
   - pymdownx.arithmatex:
@@ -39,17 +44,15 @@ markdown_extensions:
   - pymdownx.emoji
   - pymdownx.extra
   - pymdownx.superfences:
-      custom_fences:
-        - name: mermaid
-          class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format
-use_directory_urls: false
+  - pymdownx.tabbed:
+      alternate_style: true
 theme:
   name: material
   pallet:
     primary: "#2A4CDF"
+    accent: "#008A67"
   font:
-    text: 'Titillium Web'
+    text: "Titillium Web"
   features:
     - content.code.copy
     - content.code.annotate
@@ -57,28 +60,12 @@ theme:
     - navigation.footer
     - navigation.top
   favicon: assets/favicon.png
-  logo: assets/nomad-logo.png
+  logo: assets/nomad-plugin-logo.png
   icon:
     repo: fontawesome/brands/github
-extra: 
+extra:
   generator: false
-  homepage: https://nomad-lab.eu
-# theme:
-#   name: "material"
-#   features:
-#   - navigation.tabs
-#   - navigation.sections
-#   - navigation.top
-#   - navigation.bottom
-#   - toc.integrate
-#   - search.suggest
-#   - search.highlight
-#   - content.tabs.link
-#   - content.tabs.copy
-#   - content.code.annotation
-  # icon:
-  #   admonition:
-  #     note: octicons/tag-16
+  homepage: https://fairmat-nfdi.github.io/pynxtools-spm/
 extra_css:
   - stylesheets/extra.css
 extra_javascript:
