--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,8 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "pynxtools>=0.12.0",
     "findiff>=0.11.1",
-    # "pynxtools>=0.11.0",
-    "pynxtools @ git+https://github.com/FAIRmat-NFDI/pynxtools.git@master#egg=pynxtools",
     # "pySPM==0.6.2",  # SPM file reader for Bruker files use it when you have Bruker files
     "matplotlib",
     "scipy",
@@ -34,14 +33,14 @@ dependencies = [
 
 [project.urls]
 "Homepage" = "https://github.com/FAIRmat-NFDI/pynxtools-spm"
-"Parent Project" =  "https://github.com/FAIRmat-NFDI"
+"Parent Project" = "https://github.com/FAIRmat-NFDI"
 
 [project.optional-dependencies]
 dev = [
     "mypy",
     "ruff>=0.14.0",
     "pytest",
-    "pre-commit",
+    "pre-commit"
 ]
 
 docs = [
