--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "pynxtools>=0.12.0",
+    # "pynxtools>=0.12.0",
+    "pynxtools @ git+https://github.com/FAIRmat-NFDI/pynxtools.git@use-log-files-in-tests#egg=pynxtools",
     "findiff>=0.11.1",
     # "pySPM==0.6.2",  # SPM file reader for Bruker files use it when you have Bruker files
     "matplotlib",
