Follow file structre from pynxtools-plugin-template and bring non-tracked file.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
   "editor.tabCompletion": "on",
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
+  "editor.rulers": [90],
+  "editor.renderWhitespace": "all",
+  "editor.tabSize": 4,
   "github.copilot.enable": {
     "*": true,
     "plaintext": false,
