--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,8 @@
-name: Publish on PyPI
+name: Upload Python Package
 
 on:
   release:
     types: [published]
-  workflow_dispatch:
 
 env:
   python-version: 3.12
@@ -20,7 +19,7 @@ jobs:
         with:
           fetch-depth: 0
           submodules: recursive
-      - name: Install uv and set the python version
+      - name: Install uv and set the python version to ${{ env.python-version }}
         uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ env.python-version }}
@@ -44,10 +43,14 @@ jobs:
         with:
           fetch-depth: 0
           submodules: recursive
-      - uses: astral-sh/setup-uv@v5
+      - name: Install uv and set the python version to ${{ env.python-version }}
+        uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ env.python-version }}
-      - name: Install pynx-spm
+      - name: Install latest nomad release
+        run: |
+          uv pip install nomad-lab[infrastructure]
+      - name: Install pynxtools-spm
         run: |
           uv pip install -e ".[dev]"
       - name: Test with pytest
@@ -74,13 +77,12 @@ jobs:
         with:
           fetch-depth: 0
           submodules: recursive
-      - uses: astral-sh/setup-uv@v5
+      - name: Install uv and set the python version to ${{ env.python-version }}
+        uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ env.python-version }}
-      - run: uv pip install build
-      - run: |
-          git reset --hard HEAD
-          python -m build
+      - name: Build package
+        run: uv build
       - name: Upload dist artifacts
         uses: actions/upload-artifact@v4
         with:
