--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -6,53 +6,37 @@ on:
   pull_request:
     branches: [main]
 
-env:
-  UV_SYSTEM_PYTHON: true
-
 jobs:
   pytest:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python_version: ["3.10", "3.11", "3.12", "3.13"]
-        pynxtools_versions: ["master"]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
 
     steps:
       - uses: actions/checkout@v4
+      - name: Install uv and set the python version to ${{ matrix.python-version }}
+        uses: astral-sh/setup-uv@v5
         with:
-          fetch-depth: 0
-          submodules: recursive
-      - name: Set up Python ${{matrix.python_version}}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{matrix.python_version}}
-      - name: Install uv
-        run: |
-          python -m pip install --upgrade pip
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-      - name: Install pynxtools version ${{ matrix.pynxtools_versions }}
-        run: |
-          PYNXTOOLS_VERSION="${{ matrix.pynxtools_versions }}"
-          uv pip uninstall pynxtools -q
-          # Check for any branches
-          if [[ ! "$PYNXTOOLS_VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            uv pip install pynxtools@git+https://github.com/FAIRmat-NFDI/pynxtools@${{ matrix.pynxtools_versions }}
-          elif [[ "$PYNXTOOLS_VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            uv pip install pynxtools==${{ matrix.pynxtools_versions }}
-          else
-            uv pip install pynxtools
-          fi
+          python-version: ${{ matrix.python-version }}
       - name: Install nomad
         run: |
           uv pip install nomad-lab[infrastructure]@git+https://gitlab.mpcdf.mpg.de/nomad-lab/nomad-FAIR.git
-      - name: Install package and dependencies
+      - name: Install package and pynxtools master branch
         run: |
-          uv pip install .[dev]
-      - name: Test pynxtools data conversion
+          uv pip install ".[dev]"
+          uv pip install coverage coveralls
+      - name: Install pynxtools master branch
         run: |
-          pytest tests/test_reader.py
-      - name: Test Nomad Examples
-        if: "${{ matrix.python_version != '3.8'}}"
+          uv pip install pynxtools@git+https://github.com/FAIRmat-NFDI/pynxtools
+      - name: Test with pytest
         run: |
-          pytest tests/test_nomad_examples.py
+          coverage run -m pytest -sv --show-capture=no tests
+      - name: Submit to coveralls
+        continue-on-error: true
+        if: ${{ matrix.python-version == '3.12' }}
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+            coveralls --service=github
