--- a/.github/workflows/spellcheck.yaml
+++ b/.github/workflows/spellcheck.yaml
@@ -9,20 +9,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Install dependencies and dictionary
-      run: |
-        npm install -g cspell jq @cspell/dict-scientific-terms-us
+      - name: Install dependencies and dictionary
+        run: |
+          npm install -g cspell jq @cspell/dict-scientific-terms-us
 
-    - name: Run cspell
-      run: |
-        cspell --config cspell.json "docs/explanation/**/*" "docs/how-to-guides/**/*" "docs/reference/**/*" "docs/tutorials/**/*"  "docs/*.md" "CITATION.cff" "README.md"
+      - name: Run cspell
+        run: |
+          cspell --config cspell.json \
+          "README.md" "CITATION.cff" \
+          "docs/**/*" \
+          "src/pynxtools_spm/**/*.py" \
+          "tests/**/*.py"
 
-    - name: Fail on errors
-      run: |
-        if [[ $? -ne 0 ]]; then
-          echo "There are spelling errors in your code. Please fix them and try again."
-          exit 1
-        fi
+      - name: Fail on errors
+        run: |
+          if [[ $? -ne 0 ]]; then
+            echo "There are spelling errors in your code. Please fix them and try again."
+            exit 1
+          fi
