--- a/docs/included_file_content/stm/stm.scheme.archive.yaml
+++ b/docs/included_file_content/stm/stm.scheme.archive.yaml
@@ -40,7 +40,7 @@ definitions:
             eln:
               component: EnumEditQuantity
           description: |
-            Name of the technique used for the experiment, e.g. STM. 
+            Name of the technique used for the experiment, e.g. STM.
         scan_mode:
           type:
             type_kind: Enum
@@ -63,7 +63,7 @@ definitions:
             coming from the output file, e.g. Comment01 SYNC & Filter LP 8order WITHDRAW
             600 steps, locked Au(111), 50pA, 100 mV set point, 1mV DCA, 973Hz,138
             1st H, -84 2nd H.
-        identifier_experiment: 
+        identifier_experiment:
           type: str
           m_annotations:
             eln:
@@ -71,7 +71,7 @@ definitions:
           description: |
             An unique identifier fot the experiment. e.g. the identifier
             could be specific for a lab or experiment team.
-        identifier_collection: 
+        identifier_collection:
           type: str
           m_annotations:
             eln:
@@ -141,14 +141,14 @@ definitions:
                         eln:
                           component: StringEditQuantity
                       description: |
-                          Version or model of the component named by the manufacturer (e.g. Nanonis).
+                        Version or model of the component named by the manufacturer (e.g. Nanonis).
                     model/@version:
                       type: str
                       m_annotations:
                         eln:
                           component: StringEditQuantity
                       description: |
-                        If model has a distinquishable version (e.g. BP5e).
+                        If model has a distinguishable version (e.g. BP5e).
               software:
                 section:
                   m_annotations:
@@ -184,7 +184,7 @@ definitions:
                         eln:
                           component: StringEditQuantity
                       description: |
-                        If model has a distinquishable version (e.g. BP5e).
+                        If model has a distinguishable version (e.g. BP5e).
               height_piezo_sensor:
                 section:
                   m_annotations:
@@ -209,7 +209,7 @@ definitions:
                                     eln:
                                       component: StringEditQuantity
                                   description: |
-                                    An unique identifier for the piezo material.              
+                                    An unique identifier for the piezo material.
               lockin_amplifier:
                 section:
                   m_annotations:
@@ -263,7 +263,7 @@ definitions:
         Sample:
           section:
             m_annotations:
-              eln: 
+              eln:
                 overview: true
             quantities:
               name:
@@ -281,7 +281,7 @@ definitions:
                 description: |
                   The chemical formula specified using CIF conventions.
                   Abbreviated version of CIF standard:
-                  
+
                   * Only recognized element symbols may be used.
                   * Each element symbol is followed by a 'count' number. A count of '1' may be omitted.
                   * A space or parenthesis must separate each cluster of (element symbol + count).
@@ -292,7 +292,7 @@ definitions:
                     structure, the order of the elements within any group or moiety depends on
                     whether or not carbon is present.
                   * If carbon is present, the order should be:
-                  
+
                     - C, then H, then the other elements in alphabetical order of their symbol.
                     - If carbon is not present, the elements are listed purely in alphabetic order of their symbol.
                     
@@ -336,7 +336,7 @@ definitions:
                       description: |
                         The chemical formula specified using CIF conventions.
                         Abbreviated version of CIF standard:
-                        
+
                         * Only recognized element symbols may be used.
                         * Each element symbol is followed by a 'count' number. A count of '1' may be omitted.
                         * A space or parenthesis must separate each cluster of (element symbol + count).
@@ -347,7 +347,7 @@ definitions:
                           structure, the order of the elements within any group or moiety depends on
                           whether or not carbon is present.
                         * If carbon is present, the order should be:
-                        
+
                           - C, then H, then the other elements in alphabetical order of their symbol.
                           - If carbon is not present, the elements are listed purely in alphabetic order of their symbol.
                           
@@ -379,7 +379,7 @@ definitions:
                               eln:
                                 component: RichTextEditQuantity
                             description: |
-                              Title of an image or other details of the note.                          
+                              Title of an image or other details of the note.
                   quantities:
                     identifier_history:
                       type: str
