--- a/src/pynxtools_spm/nomad/example_uploads/stm/STMExampleWithCustomization/stm.scheme.archive.yaml
+++ b/src/pynxtools_spm/nomad/example_uploads/stm/STMExampleWithCustomization/stm.scheme.archive.yaml
@@ -151,7 +151,7 @@ definitions:
                         eln:
                           component: StringEditQuantity
                       description: |
-                        If model has a distinquishable version (e.g. BP5e).
+                        If model has a distinguishable version (e.g. BP5e).
               software:
                 section:
                   m_annotations:
@@ -187,7 +187,7 @@ definitions:
                         eln:
                           component: StringEditQuantity
                       description: |
-                        If model has a distinquishable version (e.g. BP5e).
+                        If model has a distinguishable version (e.g. BP5e).
               height_piezo_sensor:
                 section:
                   m_annotations:
